tests/NormalTests/paczka2/big_fuzzy/54988978.err
Error in line 3: 5AlmH2qo A277 25,8
Error in line 33: gj4eL7W A277 48,8
Error in line 25: 5AlmH2qo S448 0,0
Error in line 32: 0Jd5TWD9x S129 92,8
Error in line 43: 0Jd5TWD9x A277 73,8
Error in line 48: gj4eL7W S129 66,3
Error in line 51: 5AlmH2qo S412 85,0
Error in line 30: pv3CF S448 38,7
Error in line 66: hlG1loZviCP S129 71,3
Error in line 70: R5ZE4 S448 85,2
Error in line 68: pv3CF S129 49,3
Error in line 78: S412 A277 24,6
Error in line 75: gj4eL7W S129 38,8
Error in line 83: 5AlmH2qo A277 48,4
Error in line 86: 5AlmH2qo S412 46,0
Error in line 82: S412 S129 92,4
Error in line 89: 5AlmH2qo A277 63,7
Error in line 91: 5AlmH2qo S448 21,1
Error in line 92: 5AlmH2qo S412 78,7
Error in line 93: 5AlmH2qo S448 2,1
Error in line 47: 0Jd5TWD9x S129 87,8
Error in line 126: S412 S448 97,5
Error in line 124: 5AlmH2qo S448 95,2
Error in line 133: 5AlmH2qo S412 11,2
Error in line 120: gj4eL7W S129 304,8
Error in line 146: 5AlmH2qo S448 40,3
Error in line 136: hlG1loZviCP A277 3,6
Error in line 151: gj4eL7W A277 74,7
Error in line 160: S412 S412 32,2
Error in line 164: R5ZE4 S412 69,26
Error in line 150: pv3CF A277 325,0
Error in line 165: pv3CF S129 55,4
Error in line 162: R5ZE4 S129 38,1
Error in line 174: 5AlmH2qo S129 -1,9
Error in line 168: pv3CF S412 63,5
Error in line 170: R5ZE4 S412 345,9
Error in line 177: pv3CF S448 39,3
Error in line 184: 5AlmH2qo S129 267,2
Error in line 194: gj4eL7W S129 2,19
Error in line 185: pv3CF A277 77,5
Error in line 201: gj4eL7W S412 57,7
Error in line 206: S412 S129 136,1
Error in line 222: hlG1loZviCP A277 29,9
Error in line 221: gj4eL7W S412 106,9
Error in line 226: 5AlmH2qo S412 115,5
Error in line 227: gj4eL7W S129 34,0
Error in line 228: 5AlmH2qo A277 61,2
Error in line 237: 0Jd5TWD9x S448 50,76
Error in line 235: 0Jd5TWD9x A277 74,0
Error in line 240: S412 A277 52,4
Error in line 233: hlG1loZviCP S448 14,9
